[pycodestyle]

# Ignore E402 as it conflicts with the dls from-require import
# style which may come before module imports
# Ignore W503 and W504 as they seem to be controversial.
ignore = E402,W503,W504

[metadata]
name = pyburt
version = file: burt/VERSION
description = Python version of BURT
author = Ito Alcuaz
author_email = ito.alcuaz@diamond.ac.uk

[easy_install]
find_links = http://pypi.diamond.ac.uk:8080
 
[options]
packages = burt
include_package_data = False
install_requires =
    cothread==2.15
tests_require =
    pytest
    sphinx
    pycodestyle
    pytest-cov
    mock
    configparser
    pydocstyle
    coveralls
 
[options.package_data]
burt = VERSION
 
[options.entry_points]
console_scripts =
    fetch_title = burt.req:main
