[metadata]
name = pyburt
version = file: burt/VERSION
description = Python version of BURT
author = Ito Alcuaz
author_email = ito.alcuaz@diamond.ac.uk
license = Apache
url = https://gitlab.diamond.ac.uk/controls/python3/pyburt

[options]
packages = find:
include_package_data = true
install_requires =
    cothread>=2.15
    pygelf

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.package_data]
burt = VERSION

[options.entry_points]
console_scripts =
    burt-read = burt.read:main
    burt-write = burt.write:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]
application-import-names = burt,burtinter

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
     --cov=burtinter --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
